backend, frontend: fix openapi types
