# backend/src/api/admin/entities.rs
@@ -41,6 +41,7 @@ pub struct AdminEntityWithRelations {
     pub display_name: String,
     pub category_id: Uuid,
     pub family_id: Uuid,
+    #[schema(value_type = Object)]
     pub locations: sqlx::types::Json<Vec<UnprocessedLocation>>,
     pub data: Value,
     pub tags: Vec<Uuid>,
@@ -63,7 +64,7 @@ pub struct AdminEntityWithRelations {
         ("page_size" = i64, Query, description = "Number of items per page (default: 20)")
     ),
     responses(
-        (status = 200, description = "Search results for entities", body = AdminCachedEntitiesWithPagination),
+        (status = 200, description = "Search results for entities", body = PaginatedVec<AdminCachedEntity>),
         (status = 401, description = "Invalid permissions", body = ErrorResponse),
     )
 )]
