# frontend/openapi.json
@@ -358,104 +358,6 @@
         }
       }
     },
-    "/api/admin/categories/:id/icon": {
-      "put": {
-        "tags": [
-          "admin::categories"
-        ],
-        "operationId": "admin_category_update_icon",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Category identifier",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Icon"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Category icon updated"
-          },
-          "401": {
-            "description": "Invalid permissions",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "admin::categories"
-        ],
-        "operationId": "admin_category_delete_icon",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Category identifier",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Category icon deletion successful"
-          },
-          "401": {
-            "description": "Invalid permissions",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/admin/categories/{id}": {
       "get": {
         "tags": [
@@ -587,6 +489,94 @@
         "responses": {
           "200": {
             "description": "Category deletion successful"
+          },
+          "401": {
+            "description": "Invalid permissions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/admin/categories/{id}/icon": {
+      "put": {
+        "tags": [
+          "admin::categories"
+        ],
+        "operationId": "admin_category_update_icon",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Category identifier",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Category icon updated"
+          },
+          "401": {
+            "description": "Invalid permissions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "admin::categories"
+        ],
+        "operationId": "admin_category_delete_icon",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Category identifier",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Category icon deletion successful"
           },
           "401": {
             "description": "Invalid permissions",
@@ -956,7 +946,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AdminCachedEntitiesWithPagination"
+                  "$ref": "#/components/schemas/PaginatedVec"
                 }
               }
             }
@@ -1343,104 +1333,6 @@
         }
       }
     },
-    "/api/admin/families/:id/icon": {
-      "put": {
-        "tags": [
-          "admin::families"
-        ],
-        "operationId": "admin_family_update_icon",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Family identifier",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Icon"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Family icon updated"
-          },
-          "401": {
-            "description": "Invalid permissions",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "admin::families"
-        ],
-        "operationId": "admin_family_delete_icon",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Family identifier",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Family icon deletion successful"
-          },
-          "401": {
-            "description": "Invalid permissions",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/admin/families/{id}": {
       "get": {
         "tags": [
@@ -1572,6 +1464,94 @@
         "responses": {
           "200": {
             "description": "Family deleted successfully"
+          },
+          "401": {
+            "description": "Invalid permissions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/admin/families/{id}/icon": {
+      "put": {
+        "tags": [
+          "admin::families"
+        ],
+        "operationId": "admin_family_update_icon",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Family identifier",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Family icon updated"
+          },
+          "401": {
+            "description": "Invalid permissions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "admin::families"
+        ],
+        "operationId": "admin_family_delete_icon",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Family identifier",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Family icon deletion successful"
           },
           "401": {
             "description": "Invalid permissions",
@@ -1790,15 +1770,7 @@
         "operationId": "admin_logout",
         "responses": {
           "200": {
-            "description": "Logout",
-            "headers": {
-              "Set-Cookie": {
-                "schema": {
-                  "$ref": "#/components/schemas/CookieJar"
-                },
-                "description": "Cookie jar cleaned"
-              }
-            }
+            "description": "Logout"
           },
           "404": {
             "description": "User or password not found",
@@ -1851,14 +1823,7 @@
         "operationId": "admin_count_comments_entities",
         "responses": {
           "200": {
-            "description": "Dicts of entities and comments counts by family and category id",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Json"
-                }
-              }
-            }
+            "description": "Dicts of entities and comments counts by family and category id"
           },
           "401": {
             "description": "Invalid permissions",
@@ -2140,7 +2105,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/NewUser"
+                "$ref": "#/components/schemas/NewOrUpdatedUser"
               }
             }
           },
@@ -2580,7 +2545,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/CachedEntitiesWithPagination"
+                  "$ref": "#/components/schemas/PaginatedVec"
                 }
               }
             }
@@ -2693,7 +2658,7 @@
             "format": "int64"
           },
           "permissions": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "title": {
             "type": "string"
@@ -2711,10 +2676,10 @@
         ],
         "properties": {
           "origins": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "visits_30_days": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           }
         }
       },
@@ -2857,7 +2822,7 @@
             "format": "uuid"
           },
           "locations": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "moderated": {
             "type": "boolean"
@@ -2932,7 +2897,7 @@
             "format": "uuid"
           },
           "locations": {
-            "$ref": "#/components/schemas/sqlx.types.Json"
+            "type": "object"
           },
           "moderated": {
             "type": "boolean"
@@ -3110,7 +3075,7 @@
             "type": "boolean"
           },
           "locations": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "moderated": {
             "type": "boolean"
@@ -3503,10 +3468,10 @@
         ],
         "properties": {
           "comment_form": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "entity_form": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "icon_hash": {
             "type": "string",
@@ -3526,6 +3491,37 @@
           "version": {
             "type": "integer",
             "format": "int32"
+          }
+        }
+      },
+      "FetchEntityRequest": {
+        "type": "object",
+        "required": [
+          "active_categories",
+          "active_required_tags",
+          "active_hidden_tags"
+        ],
+        "properties": {
+          "active_categories": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          "active_hidden_tags": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          "active_required_tags": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            }
           }
         }
       },
@@ -3567,6 +3563,7 @@
           "key",
           "display_name",
           "field_type",
+          "field_type_metadata",
           "indexed",
           "privately_indexed",
           "mandatory",
@@ -3590,8 +3587,8 @@
             "$ref": "#/components/schemas/FieldType"
           },
           "field_type_metadata": {
-            "description": "Used to store detail about the field that relevent\nonly for the frontend. For instance, if the field is an enum\nuse it to store possible values. If it is a SingleLineText, specify\nif it's an email, a phone number, etc...",
-            "nullable": true
+            "type": "object",
+            "description": "Used to store detail about the field that relevent\nonly for the frontend. For instance, if the field is an enum\nuse it to store possible values. If it is a SingleLineText, specify\nif it's an email, a phone number, etc..."
           },
           "form_page": {
             "type": "integer",
@@ -3736,7 +3733,7 @@
             "format": "int64"
           },
           "visits_30_days": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           }
         }
       },
@@ -3809,7 +3806,22 @@
       "MultiPolygon": {
         "type": "array",
         "items": {
-          "$ref": "#/components/schemas/Polygon"
+          "type": "array",
+          "items": {
+            "type": "array",
+            "items": {
+              "allOf": [
+                {
+                  "type": "number",
+                  "format": "double"
+                },
+                {
+                  "type": "number",
+                  "format": "double"
+                }
+              ]
+            }
+          }
         }
       },
       "NewCommentRequest": {
@@ -3840,7 +3852,7 @@
             "type": "boolean"
           },
           "permissions": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "title": {
             "type": "string"
@@ -3981,10 +3993,7 @@
         ],
         "properties": {
           "entities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/T"
-            }
+            "type": "object"
           },
           "response_current_page": {
             "type": "integer",
@@ -4163,7 +4172,7 @@
             "format": "uuid"
           },
           "comment_form": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "created_at": {
             "type": "string",
@@ -4174,7 +4183,7 @@
             "type": "string"
           },
           "entity_form": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "family_id": {
             "type": "string",
@@ -4185,7 +4194,7 @@
             "format": "uuid"
           },
           "locations": {
-            "$ref": "#/components/schemas/Json"
+            "type": "object"
           },
           "tags": {
             "type": "array",
